--- a/main/resources/view/homePage.fxml
+++ b/main/resources/view/homePage.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="511.0" prefWidth="822.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.crm_system.controller.HomePageController">
+<AnchorPane prefHeight="419.0" prefWidth="835.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.crm.controller.HomePageController">
    <children>
-      <Text layoutX="31.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="90.58131352041494">
+      <Text layoutX="44.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="90.58131352041494">
          <font>
             <Font name="Apple LiGothic Medium" size="31.0" />
          </font>
@@ -35,7 +35,7 @@
             </RadialGradient>
          </fill>
       </Text>
-      <Text layoutX="60.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="52.37702885244619">
+      <Text layoutX="73.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="52.37702885244619">
          <font>
             <Font name="Apple LiGothic Medium" size="7.0" />
          </font>
@@ -56,31 +56,6 @@
             </LinearGradient>
          </fill>
       </Text>
-      <JFXButton layoutX="420.0" layoutY="87.0" text="About">
-         <font>
-            <Font name="Apple LiGothic Medium" size="14.0" />
-         </font>
-      </JFXButton>
-      <JFXButton layoutX="199.0" layoutY="87.0" text="New Arrival">
-         <font>
-            <Font name="Apple LiGothic Medium" size="14.0" />
-         </font>
-      </JFXButton>
-      <JFXButton layoutX="288.0" layoutY="87.0" text="Men's">
-         <font>
-            <Font name="Apple LiGothic Medium" size="14.0" />
-         </font>
-      </JFXButton>
-      <JFXButton layoutX="345.0" layoutY="87.0" text="Women's">
-         <font>
-            <Font name="Apple LiGothic Medium" size="14.0" />
-         </font>
-      </JFXButton>
-      <JFXButton layoutX="57.0" layoutY="27.0" prefHeight="13.0" prefWidth="72.0" style="-fx-background-color: black;" text="My Account" textFill="WHITE">
-         <font>
-            <Font name="Apple LiGothic Medium" size="12.0" />
-         </font>
-      </JFXButton>
       <ImageView fitHeight="21.0" fitWidth="24.0" layoutX="32.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../../Downloads/iOS/icons8-user-72(@3×).png" />
@@ -91,17 +66,42 @@
             <Image url="@../../../../../../../../Downloads/Android%202/icons8-shopping-bag-90(-xxhdpi).png" />
          </image>
       </ImageView>
-      <Text layoutX="725.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rs. 2,900">
+      <Text layoutX="758.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rs. 2,900">
          <font>
             <Font name="Apple LiGothic Medium" size="12.0" />
          </font>
       </Text>
-      <Separator layoutX="-4.0" layoutY="66.0" prefHeight="10.0" prefWidth="841.0" />
-      <JFXButton layoutX="73.0" layoutY="390.0" prefHeight="7.0" prefWidth="118.0" style="-fx-background-color: black;" text="Shop Now" textFill="WHITE">
+      <Separator layoutX="-10.0" layoutY="346.0" prefHeight="10.0" prefWidth="841.0" />
+      <JFXButton layoutX="32.0" layoutY="222.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Manage Product" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXButton>
-      <Separator layoutX="-4.0" layoutY="124.0" prefHeight="8.0" prefWidth="836.0" />
+      <Separator layoutX="-1.0" layoutY="76.0" prefHeight="8.0" prefWidth="836.0" />
+      <JFXButton layoutX="32.0" layoutY="98.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Palce Order" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="15.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="32.0" layoutY="138.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Manage Employee" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="15.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="32.0" layoutY="182.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Manage Order" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="15.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="32.0" layoutY="263.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Manage Customer" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="15.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="32.0" layoutY="301.0" prefHeight="27.0" prefWidth="135.0" style="-fx-background-color: black;" text="Manage Suppliers" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="15.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
