--- a/main/resources/view/loginForm.fxml
+++ b/main/resources/view/loginForm.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="login_form" prefHeight="554.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.crm_system.controller.LoginFormController">
+<AnchorPane fx:id="login_form" prefHeight="554.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.crm.controller.LoginFormController">
    <children>
       <Text layoutX="249.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="162.0181726512743">
          <font>
