--- a/main/resources/view/loginForm.fxml
+++ b/main/resources/view/loginForm.fxml
@@ -5,8 +5,10 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
@@ -16,9 +18,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="login_form" prefHeight="554.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.LoginFormController">
+<AnchorPane fx:id="loginForm" prefHeight="510.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.LoginFormController">
    <children>
-      <Text layoutX="249.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="162.0181726512743">
+      <Text layoutX="244.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="162.0181726512743">
          <font>
             <Font name="Apple LiGothic Medium" size="53.0" />
          </font>
@@ -42,7 +44,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Text>
-      <Text layoutX="309.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="68.37702885244619">
+      <Text layoutX="304.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="68.37702885244619">
          <font>
             <Font name="Apple LiGothic Medium" size="10.0" />
          </font>
@@ -62,9 +64,12 @@
                </stops>
             </LinearGradient>
          </fill>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Text>
-      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#e4e5e300" height="395.0" layoutX="42.0" layoutY="110.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="554.0" />
-      <JFXButton fx:id="btnSignIn" layoutX="230.0" layoutY="337.0" prefHeight="35.0" prefWidth="270.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Sign in" textFill="WHITE">
+      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#e4e5e300" height="323.0" layoutX="34.0" layoutY="96.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="554.0" />
+      <JFXButton fx:id="btnSignIn" layoutX="231.0" layoutY="305.0" prefHeight="35.0" prefWidth="270.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Sign in" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="20.0" />
          </font>
@@ -72,58 +77,219 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <Text layoutX="74.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in " wrappingWidth="207.7619171142578">
+      <Text layoutX="72.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in " wrappingWidth="207.7619171142578">
          <font>
             <Font name="Apple LiGothic Medium" size="53.0" />
          </font>
       </Text>
-      <JFXTextField fx:id="txtUserName" cache="true" layoutX="229.0" layoutY="219.0" prefHeight="22.0" prefWidth="270.0" promptText="Enter Username">
+      <JFXTextField fx:id="txtUserName" cache="true" layoutX="230.0" layoutY="187.0" prefHeight="22.0" prefWidth="270.0" promptText="Enter Username">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXTextField>
-      <Text layoutX="134.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="94.0">
+      <Text layoutX="135.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="94.0">
          <font>
             <Font name="Apple LiGothic Medium" size="20.0" />
          </font>
       </Text>
-      <Text layoutX="248.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By Sign in, you agree to Clothify's Conditions of Use and Privacy Notice." textAlignment="CENTER" wrappingWidth="234.88234907046456">
+      <Text layoutX="249.0" layoutY="355.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By Sign in, you agree to Clothify's Conditions of Use and Privacy Notice." textAlignment="CENTER" wrappingWidth="234.88234907046456">
          <font>
             <Font name="Apple LiGothic Medium" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="135.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="84.38294982910156">
+      <Text layoutX="136.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="84.38294982910156">
          <font>
             <Font name="Apple LiGothic Medium" size="20.0" />
          </font>
       </Text>
-      <JFXPasswordField fx:id="txtPassword" layoutX="230.0" layoutY="265.0" prefHeight="12.0" prefWidth="270.0" promptText="Enter you password">
+      <JFXPasswordField fx:id="txtPassword" layoutX="231.0" layoutY="233.0" prefHeight="12.0" prefWidth="270.0" promptText="Enter you password">
          <font>
             <Font name="Apple LiGothic Medium" size="15.0" />
          </font>
       </JFXPasswordField>
-      <Text layoutX="310.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do not have an account?" textAlignment="CENTER" wrappingWidth="116.8179931640625">
-         <font>
-            <Font name="Apple LiGothic Medium" size="10.0" />
-         </font>
-      </Text>
-      <JFXButton fx:id="btncreateAccount" layoutX="275.0" layoutY="451.0" prefHeight="28.0" prefWidth="184.0" style="-fx-background-color: DDDDDD; -fx-background-radius: 10px;" text="Fogot Password">
-         <font>
-            <Font name="Apple LiGothic Medium" size="15.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <effect>
-            <Blend />
-         </effect>
-      </JFXButton>
-      <JFXCheckBox fx:id="showPassword" checkedColor="#3679e4" graphicTextGap="0.0" layoutX="230.0" layoutY="300.0" text="Show Password">
+      <JFXCheckBox fx:id="showPassword" checkedColor="#3679e4" graphicTextGap="0.0" layoutX="231.0" layoutY="271.0" text="Show Password">
          <font>
             <Font name="Apple LiGothic Medium" size="11.0" />
          </font>
       </JFXCheckBox>
-      <Separator layoutX="422.0" layoutY="433.0" prefHeight="12.0" prefWidth="94.0" />
-      <Separator layoutX="223.0" layoutY="432.0" prefHeight="12.0" prefWidth="94.0" />
+      <Separator layoutX="408.0" layoutY="387.0" prefHeight="12.0" prefWidth="94.0" />
+      <Separator layoutX="235.0" layoutY="388.0" prefHeight="12.0" prefWidth="94.0" />
+      <Hyperlink fx:id="linkForgotPassword" layoutX="334.0" layoutY="384.0" text="Forgot Password" textFill="RED">
+         <font>
+            <Font name="Apple LiGothic Medium" size="10.0" />
+         </font>
+      </Hyperlink>
+      <ImageView fitHeight="13.0" fitWidth="12.0" layoutX="140.0" layoutY="466.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-email-100.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="12.0" layoutX="139.0" layoutY="480.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-location-100.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="11.0" fitWidth="16.0" layoutX="140.0" layoutY="453.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-phone-100.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="149.0" layoutY="461.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+94 123 456 789" textAlignment="CENTER" wrappingWidth="69.35809346827881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="9.0" />
+         </font>
+      </Text>
+      <Text layoutX="152.0" layoutY="474.0" strokeType="OUTSIDE" strokeWidth="0.0" text="customer@clothifystore.com" textAlignment="CENTER" wrappingWidth="91.60440085449466">
+         <font>
+            <Font name="Apple LiGothic Medium" size="9.0" />
+         </font>
+      </Text>
+      <Text layoutX="152.0" layoutY="489.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Panadura, Sri Lanka" textAlignment="CENTER" wrappingWidth="70.96199644234389">
+         <font>
+            <Font name="Apple LiGothic Medium" size="9.0" />
+         </font>
+      </Text>
+      <Text layoutX="60.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
+         <font>
+            <Font name="Apple LiGothic Medium" size="19.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="87.0" layoutY="484.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="498.0" layoutY="489.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\@2024 Clothifystore inc." textAlignment="CENTER" wrappingWidth="91.60440085449466">
+         <font>
+            <Font name="Apple LiGothic Medium" size="6.0" />
+         </font>
+      </Text>
+      <Text layoutX="498.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Follow Us" textAlignment="CENTER" wrappingWidth="91.60440085449466">
+         <font>
+            <Font name="Apple LiGothic Medium" size="11.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="21.0" fitWidth="26.0" layoutX="559.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-instagram-200(-xxxhdpi).png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fitHeight="21.0" fitWidth="28.0" layoutX="512.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-facebook-200(-xxxhdpi).png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <ImageView fitHeight="21.0" fitWidth="26.0" layoutX="536.0" layoutY="461.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-linkedin-200(-xxxhdpi).png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <Separator layoutX="57.0" layoutY="430.0" prefHeight="12.0" prefWidth="524.0" />
+      <Text layoutX="255.0" layoutY="457.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company" textAlignment="CENTER" wrappingWidth="69.35809346827881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="312.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Explore" textAlignment="CENTER" wrappingWidth="69.35809346827881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="369.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Product" textAlignment="CENTER" wrappingWidth="69.35809346827881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="429.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Social" textAlignment="CENTER" wrappingWidth="69.35809346827881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="262.0" layoutY="471.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About Us" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="256.0" layoutY="481.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blog" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="264.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contact Us" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="318.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Docs" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="320.0" layoutY="482.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pricing" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="324.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Resources" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="384.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fabric Colths" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="387.0" layoutY="482.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Ware" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="380.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connected" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="444.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FaceBook" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="445.0" layoutY="482.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Instergran" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Text layoutX="443.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Linkedin" textAlignment="CENTER" wrappingWidth="39.140838829606935">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Separator layoutX="498.0" layoutY="449.0" orientation="VERTICAL" prefHeight="43.0" prefWidth="2.0" />
+      <Separator layoutX="128.0" layoutY="450.0" orientation="VERTICAL" prefHeight="43.0" prefWidth="2.0" />
    </children>
 </AnchorPane>
