--- a/main/resources/view/orderDetailsForm.fxml
+++ b/main/resources/view/orderDetailsForm.fxml
@@ -1,1 +1,180 @@
-<?xml version="1.0" encoding="UTF-8"?><?import java.lang.*?><?import java.util.*?><?import javafx.scene.*?><?import javafx.scene.control.*?><?import javafx.scene.layout.*?><AnchorPane xmlns="http://javafx.com/javafx"            xmlns:fx="http://javafx.com/fxml"            fx:controller="edu.icet.controller.OrderDetailsFromController"            prefHeight="400.0" prefWidth="600.0"></AnchorPane>
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<AnchorPane fx:id="viewOrdersWindow" prefHeight="495.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.CustomerDetailsFromController">
+   <children>
+      <Text layoutX="37.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="158.24601026399273">
+         <font>
+            <Font name="Apple LiGothic Medium" size="54.0" />
+         </font>
+         <fill>
+            <RadialGradient centerX="0.4113573407202216" centerY="0.9418052256532066" radius="0.869942196531792">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.08552631735801697" green="0.15789473056793213" blue="0.1361842155456543" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.2565789520740509" green="0.7105262875556946" blue="0.6348684430122375" />
+                     </color>
+                  </Stop>
+               </stops>
+            </RadialGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Text layoutX="94.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Branderd Wear" wrappingWidth="75.60421181185234">
+         <font>
+            <Font name="Apple LiGothic Medium" size="11.0" />
+         </font>
+         <fill>
+            <LinearGradient endX="0.3681710213776722" startX="0.6864608076009502" startY="0.6888361045130641">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.2186281681060791" green="0.4868420958518982" blue="0.406377911567688" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.22782650589942932" green="0.44736841320991516" blue="0.41077810525894165" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#c2cdd71a" height="386.0" layoutX="257.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="482.0" />
+      <Separator layoutX="531.0" layoutY="50.0" prefHeight="18.0" prefWidth="200.0" />
+      <TableView fx:id="tblOrder" layoutX="271.0" layoutY="124.0" prefHeight="309.0" prefWidth="453.0">
+         <columns>
+            <TableColumn fx:id="colOrderId" prefWidth="87.5" text="Order ID" />
+            <TableColumn fx:id="colCustomerId" prefWidth="138.42742919921875" text="Customer ID" />
+            <TableColumn fx:id="colDate" prefWidth="106.57257080078125" text="Date" />
+            <TableColumn fx:id="colAmount" prefWidth="121.5" text="Amount" />
+         </columns>
+      </TableView>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#c2cdd71a" height="286.0" layoutX="17.0" layoutY="105.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.2" width="220.0" />
+      <JFXButton fx:id="btnManageEmployee" layoutX="41.0" layoutY="167.0" onAction="#btnManageEmployeeOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Employee" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnOrderDetails" layoutX="41.0" layoutY="209.0" onAction="#btnOrderDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="View Orders" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnProductDetails" layoutX="41.0" layoutY="251.0" onAction="#btnProductDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Products" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnCustomerDetails" layoutX="41.0" layoutY="293.0" onAction="#btnCustomerDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Customers" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnSupplierDetails" layoutX="41.0" layoutY="335.0" onAction="#btnSuplierDetailsOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Manage Suppliers" textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnPlaceOrder" layoutX="41.0" layoutY="125.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: black; -fx-border-radius: 10;" text="Place Order " textFill="WHITE">
+         <font>
+            <Font name="Apple LiGothic Medium" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <Text layoutX="535.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VIEW ORDERS" textAlignment="CENTER" wrappingWidth="165.37505796009594">
+         <font>
+            <Font name="Apple LiGothic Medium" size="28.0" />
+         </font>
+      </Text>
+      <ImageView fitHeight="22.0" fitWidth="18.0" layoutX="109.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Downloads/icons8-email-100.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="21.0" fitWidth="17.0" layoutX="109.0" layoutY="458.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Downloads/icons8-location-100.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="21.0" fitWidth="18.0" layoutX="109.0" layoutY="415.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Downloads/icons8-phone-100.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="128.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="+94 123 456 789" textAlignment="CENTER" wrappingWidth="75.69702169093506">
+         <font>
+            <Font name="Apple LiGothic Medium" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="123.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="customer@clothifystore.com" textAlignment="CENTER" wrappingWidth="119.55877706202881">
+         <font>
+            <Font name="Apple LiGothic Medium" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="122.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Panadura, Sri Lanka" textAlignment="CENTER" wrappingWidth="95.55275571968764">
+         <font>
+            <Font name="Apple LiGothic Medium" size="10.0" />
+         </font>
+      </Text>
+      <Text layoutX="32.0" layoutY="438.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify Store" wrappingWidth="62.141940125837436">
+         <font>
+            <Font name="Apple LiGothic Medium" size="19.0" />
+         </font>
+      </Text>
+      <Text layoutX="58.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="(PVT) Ltd." textAlignment="CENTER" wrappingWidth="42.126320091813966">
+         <font>
+            <Font name="Apple LiGothic Medium" size="7.0" />
+         </font>
+      </Text>
+      <Rectangle arcHeight="10.0" arcWidth="10.0" height="52.0" layoutX="103.0" layoutY="420.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1.0" />
+      <ImageView fitHeight="39.0" fitWidth="55.0" layoutX="699.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/icons8-permanent-job-100.png" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
