--- a/main/resources/view/supplierDetailsForm.fxml
+++ b/main/resources/view/supplierDetailsForm.fxml
@@ -19,9 +19,9 @@
 
 <AnchorPane fx:id="supplierWindow" prefHeight="495.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.controller.CustomerDetailsFromController">
    <children>
-      <Text layoutX="37.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="158.24601026399273">
+      <Text fx:id="lblClothify" layoutX="37.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify" wrappingWidth="158.24601026399273">
          <font>
-            <Font name="Apple LiGothic Medium" size="54.0" />
+            <Font name="Apple LiGothic Medium" size="57.0" />
          </font>
          <fill>
             <RadialGradient centerX="0.4113573407202216" centerY="0.9418052256532066" radius="0.869942196531792">
@@ -212,7 +212,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnAction" layoutX="529.0" layoutY="226.0" onAction="#btnActionOnAction" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Delete" textFill="WHITE">
+      <JFXButton fx:id="btnAction" layoutX="529.0" layoutY="226.0" onAction="#btnActionOnAction" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #3395FF; -fx-background-radius: 10px;" text="Action" textFill="WHITE">
          <font>
             <Font name="Apple LiGothic Medium" size="13.0" />
          </font>
